# way-of-the-tiger

./: .gitignore  README.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/backend/: .pre-commit-config.yaml  project.json  pyproject.toml
apps/backend/src/config/settings/: base.py  test.py
apps/backend/src/tests/: test_smoke.py
infra/: docker-compose.yml  project.json
