[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "YashSewarik",email = "yashsewarik1@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "django-environ (>=0.13.0,<0.14.0)",
    "graphene-django (>=3.2.3,<4.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "redis (>=7.2.0,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "opensearch-py (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=8.0.0,<9.0.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "faker (>=40.5.1,<41.0.0)"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/config/settings/local.py" = ["F403", "F401"]
"src/config/settings/test.py" = ["F403", "F401"]
"src/config/settings/base.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
package-mode = false